# SD_uv-nix

./: BSDS500_135.toml  config.py  flake.nix  generate_description.py  imagenet_1k_135.toml  imagenet_1k_168.toml  imagenet_o_135.toml  inpainting.py  main.py  make_masked_dataset.py  make_prompt_file.py  process.py  pyproject.toml  sampler.py  save_toml.py  sch_plus.py  util.py
prompt_files/: BSDS500_136_noprompt.toml  BSDS500_168_llama.toml  BSDS500_168_noprompt.toml  imagenet_1k_136_noprompt.toml  imagenet_1k_168_noprompt.toml
